Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1524

Libuv proactor does not correctly count active timeouts

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.18.0
    • proton-c-0.18.0
    • proton-c
    • None

    Description

      pn_proactor_set_timeout always increments the active count even if there is already a timeout in flight. But the semantic of pn_proactor_set_timeout is to replace the active timeout. so there should be no extra timeouts in this case.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: