PROTON-1524: Fix libuv proactor timer tracking